--- a/Examples/.classpath
+++ b/Examples/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="D:/OtherProducts/JAVA PRODUCTS/GroupDocs.Comparison/GroupDocs.Comparison_3.2.0-Java/lib/GroupDocs.Comparison.jar"/>
+	<classpathentry kind="lib" path="C:/Users/atir/Downloads/GroupDocs.Comparison_3.2.0-Java (1)/GroupDocs.Comparison_3.2.0-Java/lib/GroupDocs.Comparison.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
