--- a/Examples/GroupDocs.Comparison.Examples.Java/pom.xml
+++ b/Examples/GroupDocs.Comparison.Examples.Java/pom.xml
@@ -19,6 +19,7 @@
 	<build>
 		<resources>
 			<resource>
+				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
 			</resource>
 		</resources>
