--- a/Examples/GroupDocs.Comparison.Examples.Java/pom.xml
+++ b/Examples/GroupDocs.Comparison.Examples.Java/pom.xml
@@ -16,6 +16,13 @@
 		<version>17.3.2</version>
 	</dependency>	
 	</dependencies>
+	   <repositories>
+		<repository>
+			<id>GroupDocsJavaAPI</id>
+			<name>GroupDocs Java API</name>
+			<url>http://artifact.groupdocs.com/repo/</url>
+		</repository>
+	</repositories>
 	<build>
 		<resources>
 			<resource>
