Updated Dropwizard sample to use new Comparison API and Comparison v22.3 Added cache, based on sessions

--- a/Demos/Dropwizard/src/main/resources/defaultConfiguration.yml
+++ b/Demos/Dropwizard/src/main/resources/defaultConfiguration.yml
@@ -45,6 +45,8 @@ common:
   browse: true
   # Set false to disable right mouse click
   enableRightClick: true
+  # Session timeout (cache live time) in seconds
+  sessionTimeout: 60
 
 ################################################
 # GroupDocs.Comparison configurations
