Updated Docker configuration

--- a/Demos/Dropwizard/configuration.yml
+++ b/Demos/Dropwizard/configuration.yml
@@ -16,7 +16,7 @@ server:
 application:
   # License path
   # Absolute or relative path to GroupDocs license file
-  licensePath:
+  licensePath: ${LIC_PATH:-C:/GroupDocs.Total.Java.lic}
   # Host name or ip for server instance
   hostAddress: ${application.hostAddress}
 
@@ -33,13 +33,13 @@ common:
   pageSelector: true
   # Document download
   # Set false to disable document download
-  download: true
+  download: ${DOWNLOAD_ON:-true}
   # Document upload
   # Set false to disable document upload
-  upload: true
+  upload: ${UPLOAD_ON:-true}
   # Document print
   # Set false to disable document print
-  print: true
+  print: ${PRINT_ON:-true}
   # File browser
   # Set false to disable document browse
   browse: true
@@ -54,10 +54,10 @@ common:
 comparison:
   # Files directory path
   # Absolute or relative path to files directory
-  filesDirectory: DocumentSamples
+  filesDirectory: ${FILES_DIR:-DocumentSamples}
   # FResult files directory path
   # Absolute path to result files directory
-  resultDirectory:
+  resultDirectory: ${RESULT_DIR:-DocumentSamples}
   # Result pages preload
   # How many pages from a result document should be loaded, remaining pages will be loaded on page scrolling
   # Set 0 to load all pages at once
