--- a/Demos/Spring/Dockerfile
+++ b/Demos/Spring/Dockerfile
@@ -20,6 +20,7 @@ ENV DOWNLOAD_ON true
 ENV UPLOAD_ON true
 ENV PRINT_ON true
 ENV BROWSE_ON true
+ENV RIGHTCLICK_ON false
 ENV FILES_DIR "DocumentSamples"
 ENV RESULT_DIR "DocumentSamples"
 ENV HOST_ADDRESS ""
