--- a/Demos/Dropwizard/Dockerfile
+++ b/Demos/Dropwizard/Dockerfile
@@ -19,8 +19,11 @@ ENV LIC_PATH "Licenses"
 ENV DOWNLOAD_ON true
 ENV UPLOAD_ON true
 ENV PRINT_ON true
+ENV BROWSE_ON true
+ENV RIGHTCLICK_ON false
 ENV FILES_DIR "DocumentSamples"
 ENV RESULT_DIR "DocumentSamples"
+ENV HOST_ADDRESS ""
 
 EXPOSE 8080
 
