--- a/Demos/Spring/pom.xml
+++ b/Demos/Spring/pom.xml
@@ -10,12 +10,12 @@
     <packaging>${packaging.type}</packaging>
 
     <name>GroupDocs.Comparison for Java Spring Sample</name>
-    <url>http://groupdocs.com</url>
+    <url>https://groupdocs.com</url>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.4.RELEASE</version>
+        <version>2.6.5</version>
     </parent>
 
     <profiles>
@@ -33,42 +33,9 @@
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-shade-plugin</artifactId>
-                        <version>2.4.3</version>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>shade</goal>
-                                </goals>
-                                <configuration>
-                                    <transformers>
-                                        <transformer
-                                                implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                            <resource>META-INF/spring.handlers</resource>
-                                        </transformer>
-                                        <transformer
-                                                implementation="org.springframework.boot.maven.PropertiesMergingResourceTransformer">
-                                            <resource>META-INF/spring.factories</resource>
-                                        </transformer>
-                                        <transformer
-                                                implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                            <resource>META-INF/spring.schemas</resource>
-                                        </transformer>
-                                        <transformer
-                                                implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                                        <transformer
-                                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                            <mainClass>com.groupdocs.ui.Application</mainClass>
-                                        </transformer>
-                                    </transformers>
-                                </configuration>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <createDependencyReducedPom>false</createDependencyReducedPom>
-                        </configuration>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <!-- The same with maven-shade-plugin, configured in parent -->
                     </plugin>
                 </plugins>
             </build>
