--- a/Demos/Spring/client/package.json
+++ b/Demos/Spring/client/package.json
@@ -37,24 +37,24 @@
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
     "@angular/router": "^8.2.14",
-    "@groupdocs.examples.angular/comparison": "^0.8.20",
+    "@groupdocs.examples.angular/comparison": "^0.8.80",
     "@nrwl/angular": "^8.8.2",
     "core-js": "^2.6.10",
     "rxjs": "~6.4.0",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.1",
-    "@angular/cli": "8.1.1",
+    "@angular-devkit/build-angular": "^0.800.0",
+    "@angular/cli": "8.0.0",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/language-service": "^8.2.14",
-    "@nrwl/cypress": "8.4.3",
-    "@nrwl/jest": "8.4.3",
-    "@nrwl/workspace": "8.4.3",
+    "@nrwl/cypress": "8.2.0",
+    "@nrwl/jest": "8.2.0",
+    "@nrwl/workspace": "8.2.0",
     "@types/jest": "24.0.9",
     "@types/node": "~8.9.4",
     "codelyzer": "~5.0.1",
-    "cypress": "3.4.0",
+    "cypress": "~3.3.1",
     "dotenv": "6.2.0",
     "jest": "24.1.0",
     "jest-preset-angular": "7.0.0",
