Updated Dropwizard sample to support Dropbox as file storage via it's API

--- a/Demos/Dropwizard/src/main/resources/defaultConfiguration.yml
+++ b/Demos/Dropwizard/src/main/resources/defaultConfiguration.yml
@@ -101,3 +101,13 @@ google:
   localServerReceiverPort: ${LOCAL_SERVER_RECEIVER_PORT:-8888}
   # user ID or null if not using a persisted credential store
   authorizationUserId: user
+################################################
+# Dropbox API files provider Configuration
+################################################
+dropbox:
+  # The identifier that will be used as User-Agent in API requests
+  clientIdentifier: ${CLIENT_IDENTIFIER:groupdocs/comparison-java}
+  # Dropbox access token
+  accessToken: ${ACCESS_TOKEN:-}
+  # Directory in which result files will be uploaded via Dropbox API, default value is `ResultFiles`.
+  resultDirectory: ${RESULT_DIR:-ResultFiles}
