--- a/Demos/Ktor/comparison-ktor/src/main/resources/application.conf
+++ b/Demos/Ktor/comparison-ktor/src/main/resources/application.conf
@@ -1,26 +1,75 @@
-ktor {
-    deployment {
-        dev {
-            host = "localhost"
-            port = 8080
-            port = ${?PORT}
-        }
-        prod {
-            host = "localhost"
-            port = 80
-            port = ${?PORT}
-        }
-    }
+{
+    ################################################
+    # Application (global) configurations
+    ################################################
     application {
-        modules = [ com.groupdocs.ui ]
+        # Absolute or relative path to GroupDocs license
+        # Can be as a path to license file, to directory, in which license file is placed (*.lic) or url to download license file
+        # Default value is `Licenses`
+        licensePath = null
+        # Host name or ip for server instance
+        hostAddress = null
+    }
+    ################################################
+    # Common configurations
+    ################################################
+    common {
+        # File rewriting on document uploading
+        # Set false to cancel uploading in case of existence of file with the same name
+        # Set true to replace files with same name
+        rewrite = true
+        # Page navigation
+        # Set false to disable document navigation (go to next, previous, last and first page)
+        pageSelector = true
+        # Document download
+        # Set false to disable document download
+        download = true
+        # Document upload
+        # Set false to disable document upload
+        upload = true
+        # Document print
+        # Set false to disable document print
+        print = true
+        # File browser
+        # Set false to disable document browse
+        browse = true
+        # Set false to disable right mouse click
+        enableRightClick = true
+    }
+    ################################################
+    # GroupDocs.Comparison configurations
+    ################################################
+    comparison {
+        # Files provider, where to get files to show them in browse dialog
+        # Available values are `google` - using Google Drive API, `dropbox` - using Dropbox API, `local` - using local directories
+        filesProviderType = "local"
+        # Result pages preload
+        # How many pages from a result document should be loaded, remaining pages will be loaded on page scrolling
+        # Set 0 to load all pages at once
+        preloadResultPageCount = 0
+        # Page width that will be used to resize preview images before displaying them
+        # Default value is 768
+        previewPageWidth = 768
+        # Ratio to calculate height of preview images using width
+        # Default value is 1.3
+        previewPageRatio = 1.3
+        # Absolute or relative path to directory to save cache files
+        # Default value is system temp directory. The path is always local
+        cacheDirectory = "asd"
+        # Absolute or relative path to directory to save temporary files
+        # in case of using local files provider, relative path will be resolved with filesDirectory as base path
+        # Default value is system temp directory. The path is always local
+        tempDirectory = ""
+    }
+    ################################################
+    # Local files provider Configuration
+    ################################################
+    local {
+        # Files directory path
+        # Absolute or relative path to files directory, default value is `DocumentSamples`.
+        filesDirectory = "DocumentSamples"
+        # Result files directory path
+        # Absolute or relative path to result files directory, default value is `DocumentSamples/Temp`.
+        resultDirectory = "DocumentSamples"
     }
 }
-# ktor {
-#     deployment {
-#         port = 8080
-#         port = ${?PORT}
-#     }
-#     application {
-#         modules = [ com.groupdocs.ui.ApplicationKt.module ]
-#     }
-# }
