Added base functionality to compare documents

--- a/Demos/Ktor/comparison-ktor/src/main/resources/application.conf
+++ b/Demos/Ktor/comparison-ktor/src/main/resources/application.conf
@@ -66,10 +66,12 @@
     ################################################
     local {
         # Files directory path
+        # Directory must be created before app starts
         # Absolute or relative path to files directory, default value is `DocumentSamples`.
         filesDirectory = "DocumentSamples"
         # Result files directory path
-        # Absolute or relative path to result files directory, default value is `DocumentSamples/Temp`.
-        resultDirectory = "DocumentSamples"
+        # Directory must be created before app starts
+        # Absolute or relative path to result files directory, default value is `ResultFiles`.
+        resultDirectory = "ResultFiles"
     }
 }
