--- a/Demos/Ktor/comparison-ktor/src/main/resources/application.conf
+++ b/Demos/Ktor/comparison-ktor/src/main/resources/application.conf
@@ -6,9 +6,11 @@
         # Absolute or relative path to GroupDocs license
         # Can be as a path to license file, to directory, in which license file is placed (*.lic) or url to download license file
         # Default value is `Licenses`
-        licensePath = null
+        licensePath = ""
+        licensePath = ${?LIC_PATH}
         # Host name or ip for server instance
-        hostAddress = null
+        hostAddress = ""
+        hostAddress = ${?HOST_ADDRESS}
     }
     ################################################
     # Common configurations
@@ -18,23 +20,29 @@
         # Set false to cancel uploading in case of existence of file with the same name
         # Set true to replace files with same name
         rewrite = true
+        rewrite = ${?REWRITE}
         # Page navigation
         # Set false to disable document navigation (go to next, previous, last and first page)
         pageSelector = true
         # Document download
         # Set false to disable document download
         download = true
+        download = ${?DOWNLOAD_ON}
         # Document upload
         # Set false to disable document upload
         upload = true
+        upload = ${?UPLOAD_ON}
         # Document print
         # Set false to disable document print
         print = true
+        print = ${?PRINT_ON}
         # File browser
         # Set false to disable document browse
         browse = true
+        browse = ${?BROWSE_ON}
         # Set false to disable right mouse click
         enableRightClick = true
+        enableRightClick = ${?RIGHTCLICK_ON}
     }
     ################################################
     # GroupDocs.Comparison configurations
@@ -43,23 +51,28 @@
         # Files provider, where to get files to show them in browse dialog
         # Available values are `google` - using Google Drive API, `dropbox` - using Dropbox API, `local` - using local directories
         filesProviderType = "local"
+        filesProviderType = ${?FILES_PROVIDER_TYPE}
         # Result pages preload
         # How many pages from a result document should be loaded, remaining pages will be loaded on page scrolling
         # Set 0 to load all pages at once
         preloadResultPageCount = 0
         # Page width that will be used to resize preview images before displaying them
         # Default value is 768
-        previewPageWidth = 768
+        previewPageWidth = 0
+        previewPageWidth = ${?PREVIEW_PAGE_WIDTH}
         # Ratio to calculate height of preview images using width
         # Default value is 1.3
-        previewPageRatio = 1.3
+        previewPageRatio = 0
+        previewPageRatio = ${?PREVIEW_PAGE_RATIO}
         # Absolute or relative path to directory to save cache files
         # Default value is system temp directory. The path is always local
-        cacheDirectory = "asd"
+        cacheDirectory = ""
+        cacheDirectory = ${?CACHE_DIR}
         # Absolute or relative path to directory to save temporary files
         # in case of using local files provider, relative path will be resolved with filesDirectory as base path
         # Default value is system temp directory. The path is always local
         tempDirectory = ""
+        tempDirectory = ${?TEMP_DIR}
     }
     ################################################
     # Local files provider Configuration
@@ -69,9 +82,11 @@
         # Directory must be created before app starts
         # Absolute or relative path to files directory, default value is `DocumentSamples`.
         filesDirectory = "DocumentSamples"
+        filesDirectory = ${?FILES_DIR}
         # Result files directory path
         # Directory must be created before app starts
         # Absolute or relative path to result files directory, default value is `ResultFiles`.
-        resultDirectory = "ResultFiles"
+        resultDirectory = ""
+        resultDirectory = ${?RESULT_DIR}
     }
 }
