Implemented downloading and uploading.

--- a/Demos/Ktor/comparison-ktor/src/main/resources/application.conf
+++ b/Demos/Ktor/comparison-ktor/src/main/resources/application.conf
@@ -8,9 +8,6 @@
         # Default value is `Licenses`
         licensePath = ""
         licensePath = ${?LIC_PATH}
-        # Host name or ip for server instance
-        hostAddress = ""
-        hostAddress = ${?HOST_ADDRESS}
     }
     ################################################
     # Common configurations
@@ -49,9 +46,9 @@
     ################################################
     comparison {
         # Files provider, where to get files to show them in browse dialog
-        # Available values are `google` - using Google Drive API, `dropbox` - using Dropbox API, `local` - using local directories
+        # Available values are `local` - using local directories
+        # Other providers are not implemented. See sample of implementation in spring/dropwizard examples
         filesProviderType = "local"
-        filesProviderType = ${?FILES_PROVIDER_TYPE}
         # Result pages preload
         # How many pages from a result document should be loaded, remaining pages will be loaded on page scrolling
         # Set 0 to load all pages at once
