--- a/Demos/Spring/src/main/resources/defaultConfiguration.yml
+++ b/Demos/Spring/src/main/resources/defaultConfiguration.yml
@@ -5,7 +5,7 @@ server:
   connector:
     # Changing port is available for embedded server only
     # Is is not possible to change port for deploying application on external server
-    port: 8080
+    port: ${PORT:8080}
 
 
 ################################################
